trying to implement s3

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "db:generate": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.437.0",
+    "@aws-sdk/types": "^3.433.0",
     "@prisma/client": "^4.9.0",
+    "@types/multer": "^1.4.9",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -26,6 +29,7 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "signale": "^1.4.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
