upload image to s3 done

--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.437.0",
-    "@aws-sdk/types": "^3.433.0",
+    "@aws-sdk/s3-request-presigner": "^3.438.0",
     "@prisma/client": "^4.9.0",
-    "@types/multer": "^1.4.9",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -35,6 +34,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.433.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
@@ -42,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/method-override": "^0.0.32",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.9",
     "@types/node": "^18.11.18",
     "@types/signale": "^1.4.4",
     "@types/swagger-jsdoc": "^6.0.2",
