--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "signale": "^1.4.0",
+    "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
