--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-s3": "^3.437.0",
     "@aws-sdk/s3-request-presigner": "^3.438.0",
     "@prisma/client": "^4.9.0",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
