--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --fix && pretty-quick && prisma format",
     "db:migrate": "prisma migrate deploy",
     "db:make-migrations": "prisma migrate dev",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.437.0",
@@ -36,10 +37,14 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.433.0",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/method-override": "^0.0.32",
     "@types/morgan": "^1.9.4",
@@ -49,15 +54,18 @@
     "@types/swagger-ui-express": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "babel-jest": "^29.7.0",
     "eslint-config-standard-with-typescript": "^31.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
     "prisma": "^4.9.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
