--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:make-migrations": "prisma migrate dev",
     "db:generate": "prisma generate",
-    "test": "jest"
+    "test": "jest --verbose --detectOpenHandles --silent"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.437.0",
@@ -23,6 +23,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
