--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "morgan": "^1.10.0",
     "signale": "^1.4.0",
     "socket.io": "^4.7.2",
-    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
@@ -52,6 +51,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "@types/signale": "^1.4.4",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -67,6 +67,7 @@
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
     "prisma": "^4.9.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
