--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,9 @@
 {
   "singleQuote": true,
   "arrowParens": "always",
-  "printWidth": 120
+  "printWidth": 120,
+  "semi": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "none"
 }
